# Sinavhazirlama

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  lint.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  test_sinavhazirlama.db
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  exams.py  health.py  materials.py  plans.py
backend/app/core/: config.py  drive.py  exceptions.py  gemini.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  exam.py  plan.py  question.py  user.py  workspace.py
backend/app/schemas/: common.py  exam.py  plan.py  question.py  user.py
backend/app/services/: document_service.py  drive_service.py  exam_service.py  gemini_service.py  plan_service.py  user_service.py  workspace_service.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 001_initial.py
backend/tests/: conftest.py  test_auth.py  test_exams.py  test_plans.py  test_services.py
backend/uploads/1/: yillik_plan.docx
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  FEATURES.md  INSTALLATION.md  TROUBLESHOOTING.md
frontend/: .eslintrc.json  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useAuth.tsx  useFetch.ts  (+1 more)
(+46 files in other folders)
